--- a/web/src/styles/components/HomeNavigation.module.css
+++ b/web/src/styles/components/HomeNavigation.module.css
@@ -1,32 +1,70 @@
-.container{
+/* PC */
+@media (min-width: 720px) {
+  .roundedButton,
+  .menuItems,
+  .navItemsTablet,
+  .menuItemCelular {
+    display: none;
+  }
+
+  .navItems {
     display: flex;
-    position: relative;
-}
-.roundedButton{
-    margin: 0.8rem;
-    width: 3.2rem;
-    height: 3.2rem;
+    gap: 1.4rem;
+  }
+
+  .navItemDestaque {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #FFF;
+    padding: 0.4rem 1.6rem;
+    border-radius: 1.6rem;
+    background-color: #566dea;
+    color: #fff;
+    font-size: small;
+  }
+
+  .navItemDestaque svg {
+    margin-right: 0.4rem;
+  }
+
+  .navItem {
+    padding: 0.4rem 1.6rem;
+    border-radius: 1.6rem;
+    background-color: #fff;
+    color: #566dea;
+    font-size: small;
+  }
+
+  .navItemDestaque:hover {
+    filter: brightness(1.3);
+  }
+  .navItem:hover {
+    filter: brightness(0.8);
+  }
+}
+/* Tablet */
+@media (min-width: 320px) and (max-width: 720px) {
+  .container {
+    display: flex;
+    position: relative;
+  }
+  .roundedButton {
     border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.4rem 1.6rem;
+    border-radius: 1.6rem;
+    background-color: #566dea;
+    color: #fff;
+    font-size: small;
     transition: 0.3s;
-}
-.roundedButton svg{
-    fill: #566dea;
-}
-.roundedButton:hover,
-.roundedButton:active{    
-    filter: brightness(0.9);
-}
+  }
+  .roundedButton:hover {
+    filter: brightness(1.3);
+  }
 
-.roundedButton:hover,
-.roundedButton:active{    
-    filter: brightness(0.9);
-}
-
-.menuItems{
+  .menuItems {
     position: absolute;
     top: 3rem;
     right: 3rem;
@@ -38,28 +76,148 @@
 
     justify-content: center;
 
-    background-color: #FFF;
+    background-color: #fff;
     border-radius: 0.8rem;
-    box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
-}
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
 
-
-.menuItems a{
+  .menuItem {
     border-radius: 0.8rem;
-    background-color: #FFF;
+    background-color: #fff;
     cursor: pointer;
     padding: 1.4rem;
     transition: 0.3s;
     color: #566dea;
     display: flex;
     align-items: center;
-}
+  }
 
-.menuItems a svg{
+  .menuItem svg {
     margin-right: 0.8rem;
     fill: #566dea;
-}
+  }
 
-.menuItems a:hover{
+  .menuItem:hover {
     filter: brightness(0.9);
+  }
+
+  .navItems,
+  .menuItemCelular {
+    display: none;
+  }
+
+  .navItemsTablet {
+    display: flex;
+    gap: 1.4rem;
+    margin: 0 1.4rem;
+  }
+  .menuItemTablet {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.4rem 1.6rem;
+    border-radius: 1.6rem;
+    background-color: #566dea;
+    color: #fff;
+    font-size: small;
+  }
+
+  .menuItemTablet svg {
+    margin-right: 0.4rem;
+  }
+
+  .navItemDestaque {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.4rem 1.6rem;
+    border-radius: 1.6rem;
+    background-color: #566dea;
+    color: #fff;
+    font-size: small;
+  }
+
+  .navItemDestaque svg {
+    margin-right: 0.4rem;
+  }
+
+  .navItem {
+    padding: 0.4rem 1.6rem;
+    border-radius: 1.6rem;
+    background-color: #fff;
+    color: #566dea;
+    font-size: small;
+  }
+
+  .navItemDestaque:hover {
+    filter: brightness(1.3);
+  }
+  .navItem:hover {
+    filter: brightness(0.8);
+  }
+}
+/* Celular */
+@media (max-width: 320px) {
+  .container {
+    display: flex;
+    position: relative;
+  }
+  .roundedButton {
+    border: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.4rem 1.6rem;
+    border-radius: 1.6rem;
+    background-color: #566dea;
+    color: #fff;
+    font-size: small;
+    transition: 0.3s;
+  }
+  .roundedButton:hover {
+    filter: brightness(1.3);
+  }
+  .menuItems {
+    position: absolute;
+    top: 3rem;
+    right: 3rem;
+
+    width: 20rem;
+
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+
+    background-color: #fff;
+    border-radius: 0.8rem;
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.75);
+  }
+  .menuItem, .menuItemCelular {
+    border-radius: 0.8rem;
+    background-color: #fff;
+    cursor: pointer;
+    padding: 1.4rem;
+    transition: 0.3s;
+    color: #566dea;
+    display: flex;
+    align-items: center;
+  }
+  .menuItem svg,
+  .menuItemCelular svg {
+    margin-right: 0.8rem;
+    fill: #566dea;
+  }
+  .menuItem:hover
+  .menuItemCelular:hover {
+    filter: brightness(0.9);
+  }
+  .navItems,
+  .navItemsTablet,
+  .menuItemTablet {
+    display: none;
+  }
+  .navItemDestaque:hover {
+    filter: brightness(1.3);
+  }
 }
