--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -9,57 +9,20 @@
   color: #000;
 }
 
-.container header {
-  width: 100%;
-  height: 3.6rem;
-  margin-bottom: 1.4rem;
+.header{
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* box-shadow: 0 5px 8px 0 rgba(0,0,0,0.3); */
-}
-
-.container header nav {
-  flex: 1;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  padding: 0 12px;
-}
-
-.brand {
-  display: flex;
-  flex-direction: row;
   align-items: center;
+  width: 100%;
+  height: 2.4rem;
+  padding: 2.8rem 4.8rem;
+  border-bottom: 1px solid #DDD;
+  margin-bottom: 1.4rem;
 }
 
-.imgBrand {
-  width: 150px;
+.navImage{
+  width: 15rem;
   height: auto;
-}
-
-.menuItems {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0.8rem;
-}
-
-.menuItems a {
-  margin: 0 0.8rem;
-  font-weight: 700;
-  font-size: medium;
-  color: #232323 !important;
-  padding: 0.4rem 0.2rem;
-  border-bottom: 2px solid #566dea;
-  text-decoration: none !important;
-  transition: 0.2s;
-}
-
-.menuItems a:hover {
-  padding: 0.4rem 0.4rem;
-  border-bottom: 3px solid #566dea;
 }
 
 .cta {
