--- a/web/src/styles/pages/Home.module.css
+++ b/web/src/styles/pages/Home.module.css
@@ -9,24 +9,31 @@
   color: #000;
 }
 
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 2.4rem;
   padding: 2.8rem 4.8rem;
-  border-bottom: 1px solid #DDD;
+  border-bottom: 1px solid #ddd;
   margin-bottom: 1.4rem;
 }
 
-.navImage{
+.navImage {
   width: 15rem;
   height: auto;
+}
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .cta {
   width: 100vw;
+  height: calc(100vh - 12.5rem);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -35,15 +42,15 @@
   margin: 0 0 2.4rem 0;
 }
 
-.mobile{
+.mobile {
   display: flex;
   flex-direction: row;
   width: 100%;
   justify-content: space-evenly;
-  margin: 2.4rem 0
+  margin: 2.4rem 0;
 }
 
-.mobile a > img{
+.mobile a > img {
   width: 15rem;
   height: auto;
   border-radius: 0.8rem;
@@ -52,7 +59,7 @@
 
 .cta img {
   width: auto;
-  height: calc(100vh - 8.6rem);
+  height: calc(50vh + 18.6rem);
   margin: 0 2.8rem;
 }
 
@@ -160,6 +167,7 @@
 
 .features {
   width: 100vw;
+  max-width: 980px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -177,9 +185,9 @@
 }
 
 .cardList {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 0.8rem;
   align-items: center;
   justify-content: center;
   gap: 2.4rem;
@@ -188,11 +196,11 @@
 .card {
   cursor: pointer;
   padding: 1.4rem;
-  margin: 0 0.8rem;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.3);
   border-radius: 0.8rem;
   transition: 0.2s;
-  max-width: 300px;
+  width: 100%;
+  height: 100%;
 }
 
 .card:hover {
@@ -235,78 +243,6 @@
   max-width: 800px;
   text-align: center;
   margin-bottom: 2.4rem;
-}
-
-.catalog {
-  position: relative;
-  background-color: #232323;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 4.8rem 2.4rem 4.8rem;
-  margin: -5.8rem 0 0 0;
-}
-
-.catalog h2 {
-  text-align: center;
-  margin: 2.4rem 0;
-  font-weight: 400;
-  font-size: 1.8rem;
-  color: #fff;
-}
-
-.carrossel {
-  width: 100vw;
-  display: grid;
-  grid-template-columns: repeat(4, 300px);
-  gap: 2.4rem;
-  overflow-x: auto;
-  cursor: grab;
-  user-select: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-}
-
-.cardItem {
-  width: fit-content;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.cardItem h2 {
-  background-color: #333;
-  width: 48px;
-  height: 48px;
-  font-size: large;
-  border-radius: 50%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  margin: 0.8rem 0;
-  font-weight: 700;
-}
-
-.cardItem p {
-  max-width: 250px;
-  font-weight: 400;
-  font-size: small;
-  text-align: center;
-  color: #fff;
-  margin-bottom: 2.4rem;
-}
-
-.cardItem img {
-  width: auto;
-  height: calc(100vh - 10.6rem);
-
-  margin-bottom: 1.4rem;
 }
 
 .cta2 {
@@ -366,7 +302,7 @@
   font-weight: 700;
 }
 
-.footerContent > img{
+.footerContent > img {
   width: 15rem;
   height: auto;
   margin: 0 0 1.4rem 0;
@@ -391,417 +327,7 @@
   margin: 0 0.4rem;
 }
 
-.clients {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 12px;
-  margin: 2.4rem 0;
-}
-
-.clients h2 {
-  margin-bottom: 2.4rem;
-  font-weight: 700;
-  font-size: 1.8rem;
-  color: rgba(0, 0, 0, 0.85);
-}
-
-.clientsCarrossel {
-  width: 100%;
-  padding: 1.4rem 0;
-  display: grid;
-  grid-template-columns: repeat(6, 300px);
-  overflow-x: auto;
-  cursor: grab;
-  user-select: none;
-  -webkit-user-select: none;
-  -khtml-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-}
-
-.clientCard {
-  cursor: pointer;
-  padding: 1.4rem;
-  margin: 0 0.8rem;
-  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.3);
-  border-radius: 0.8rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  transition: 0.2s;
-}
-
-.clientCard:hover {
-  box-shadow: 0 15px 18px 0 rgba(0, 0, 0, 0.3);
-}
-
-.clientCard img {
-  width: 64px;
-  height: 60px;
-  background-color: #333;
-  border-radius: 50%;
-}
-.clientCard div {
-  margin-left: 0.8rem;
-}
-
-.clientCard div h3 {
-  font-size: large;
-  margin-bottom: 0.4rem;
-}
-
-.clientCard div p {
-  font-size: small;
-}
-
-.clientCard div button {
-  margin: 0.4rem 0;
-  border: none;
-  display: block;
-  text-align: center;
-  background-color: #566dea;
-  color: #fff !important;
-  padding: 0.4rem 0.8rem;
-  text-decoration: none !important;
-  border-radius: 10px;
-  text-decoration: none;
-  box-shadow: 3px 3px 4px #b5b5b5;
-  transition: all 0.3s ease;
-}
-
-.clientCard div button:hover {
-  background-color: #263481;
-}
-
-.modalStatus {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.85);
-  position: fixed;
-}
-.statusContainer {
-  width: 380px;
-  height: 200px;
-  background-color: #fff;
-  border-radius: 0.8rem;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  overflow: auto;
-  padding: 2.4rem;
-}
-
-.modalCta {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgba(0, 0, 0, 0.85);
-  position: fixed;
-  overflow: hidden;
-  z-index: 150;
-}
-
-.closeButton {
-  position: absolute;
-  background-color: #cccccc26;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 2.4rem;
-  height: 2.4rem;
-  border: none;
-  top: 1.4rem;
-  left: 1.4rem;
-}
-
-.cardContainer {
-  width: 70vw;
-  height: 70vh;
-  background-color: #fff;
-  border-radius: 1.4rem;
-  position: relative;
-  display: flex;
-  flex-direction: row;
-  overflow: auto;
-}
-
-.imageContainer {
-  width: 50%;
-  height: 100%;
-  background-image: url("../../assets/images/pet.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.formContainer {
-  width: 50%;
-  height: 100%;
-  padding: 1.4rem;
-  overflow: auto;
-}
-
-.formContainer h4 {
-  max-width: 450px;
-  font-weight: 700;
-  font-size: 1.4rem;
-  color: #566dea;
-}
-
-.formContainer u {
-  margin: 0.4rem 0;
-  width: 4.8rem;
-  border-bottom: 4px solid #566dea;
-}
-
-.formContainer ul {
-  list-style: none;
-  margin: 0.8rem 0.4rem;
-  font-size: 1.2rem;
-}
-
-.formContainer div {
-  display: flex;
-  flex-direction: column;
-  margin: 0.8rem 0;
-}
-
-.formContainer div label {
-  cursor: pointer;
-  font-size: 1.4rem;
-  font-weight: bold;
-  color: #333;
-  width: fit-content;
-}
-
-.formContainer div input {
-  padding: 0.8rem;
-  border-radius: 0.8rem;
-  font-weight: bold;
-  font-size: 1.4rem;
-  border: 1px solid #000;
-}
-
-.formContainer button {
-  cursor: pointer;
-  width: fit-content;
-  padding: 0.8rem;
-  border-radius: 2.8rem;
-
-  font-weight: bold;
-  text-transform: uppercase;
-  
-  font-size: 1.4rem;
-  color: #fff;
-
-  border: none;
-  background-color: #566dea;
-  transition: filter 0.2s;
-}
-
-.formContainer button:hover {
-  filter: brightness(1.2);
-}
-
-.ctaBeta {
-  width: 100vw;
-  height: auto;
-  display: flex;
-}
-
-.contentBeta{
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url(../../assets/background-brand.png);
-  background-repeat: no-repeat;
-  background-position: -25rem 30rem;
-  padding-bottom: 2.4rem;
-}
-
-.contentBeta h2{
-  text-align: center;
-  font-size: 8rem;
-  font-weight: bold;
-  color: #566dea;
-  margin: 1.4rem 0;
-}
-
-.contentBeta p{
-  font-size: 1.8rem;
-  font-weight: normal;
-  color: #000000;
-  text-align: center;
-  margin: 0.8rem 0;
-}
-.formGroup{
-  display: flex;
-  flex-direction: column;
-  gap: 1.4rem;
-  align-items: center;
-  justify-content: center;
-}
-.formGroup label{  
-  color: #566DEA;
-  font-weight: 600;
-  margin: 0.8rem 0;
-}
-
-.formGroup input{
-  border: 1px solid #6ca6fd !important;
-}
-
-.formGroup button {
-  outline: none;
-  border: none;
-  display: block;
-  text-align: center;
-  background-color: #566dea;
-  color: #fff !important;
-  padding: 1.4rem 0.8rem;
-  text-decoration: none !important;
-  border-radius: 10px;
-  text-decoration: none;
-  box-shadow: 3px 3px 4px #b5b5b5;
-  transition: all 0.3s ease;
-}
-
-.formGroup button:hover {
-  background-color: #263481;
-}
-
-@media (max-width: 720px){
-  
-
-.ctaBeta {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-}
-
-.contentBeta{
-  width: 100%;
-  height: 100%;
-  padding: 0 2.4rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-image: url(../../assets/background-brand.png);
-  background-repeat: no-repeat;
-  background-position: -40rem 30rem;
-  padding-bottom: 2.4rem;
-}
-
-.contentBeta h2{
-  text-align: center;
-  font-size: 4rem;
-  font-weight: bold;
-  color: #566dea;
-  margin: 1.4rem 0;
-}
-
-.contentBeta p{
-  font-size: 1.4rem;
-  font-weight: normal;
-  color: #000000;
-  text-align: center;
-  margin: 0.8rem 0;
-}
-.formGroup{
-  display: flex;
-  flex-direction: column;
-  gap: .8rem;
-  align-items: center;
-  justify-content: center;
-}
-.formGroup label{  
-  color: #566DEA;
-  font-weight: 600;
-  margin: 0.8rem 0;
-}
-.formGroup input{
-  border: 1px solid #6ca6fd;
-}
-
-.formGroup button {
-  outline: none;
-  border: none;
-  display: block;
-  text-align: center;
-  background-color: #566dea;
-  color: #fff !important;
-  padding: 1.4rem 0.8rem;
-  text-decoration: none !important;
-  border-radius: 10px;
-  text-decoration: none;
-  box-shadow: 3px 3px 4px #b5b5b5;
-  transition: all 0.3s ease;
-}
-
-.formGroup button:hover {
-  background-color: #263481;
-}
-
-.container header {
-  width: 100%;
-  height: 3.6rem;
-  margin-bottom: 3.2rem;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  /* box-shadow: 0 5px 8px 0 rgba(0,0,0,0.3); */
-}
-
-  .carrossel {
-    width: 100vw;
-    display: grid;
-    grid-template-columns: repeat(4, 25rem);
-    gap: 8rem;
-    overflow-x: auto;
-    cursor: grab;
-    user-select: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-  }
-
-  .cardContainer {
-    width: 80%;
-    height: 80vh;
-    background-color: #fff;
-    border-radius: 1.4rem;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    overflow: auto;
-  }
-  .imageContainer {
-    width: 100%;
-    height: 50%;
-    background-image: url("../../assets/images/pet.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-  }  
-
-  .formContainer {
-    width: 100%;
-    height: 50%;
-    padding: 1.4rem;
-    overflow: auto;
-  }
-
+@media (max-width: 720px) {
   .cta {
     width: 100vw;
     display: flex;
@@ -811,45 +337,52 @@
     padding: 0 12px;
     margin: 0 0 2.4rem 0;
   }
-  .cta img
-   {
+  .cta img {
     height: 40vh;
     width: auto;
-   }
-   
+  }
 
-.cta .content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 100%;
-}
+  .cta .content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 100%;
+  }
 
+  .mobile {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    margin: 1.4rem 0;
+  }
 
-.mobile{
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  justify-content: space-between;
-  margin: 1.4rem 0
-}
-   
-.about {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 12px;
-  margin: 0 0 2.4rem 0;
-}
+  .about {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 0 12px;
+    margin: 0 0 2.4rem 0;
+  }
 
   .about img {
     width: auto;
     height: 50vh;
     margin: 0 2.8rem;
   }
-  
+
+  .cardList {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    gap: 0.8rem;
+    align-items: center;
+    justify-content: center;
+    gap: 2.4rem;
+  }
+
   .how img {
     width: 100vw;
     height: auto;
@@ -877,16 +410,16 @@
     padding: 0 4.8rem 2.8rem 4.8rem;
   }
 
-  .footerContent{
+  .footerContent {
     width: 100%;
     margin-bottom: 4.5rem;
   }
-  .footerContent > img{
+  .footerContent > img {
     width: 20rem;
     height: auto;
     margin: 0 0 0.8rem 0;
   }
-  .footerContent > div{
+  .footerContent > div {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -894,14 +427,13 @@
     gap: 0.4rem;
     margin: 0.4rem 0;
   }
-  .footerContent > div > a{
+  .footerContent > div > a {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
   }
-  .footerLinks{
+  .footerLinks {
     display: none;
   }
-
 }
