--- a/web/src/styles/pages/Veterinario.module.css
+++ b/web/src/styles/pages/Veterinario.module.css
@@ -126,7 +126,7 @@
 
   font-weight: bold;
   text-transform: uppercase;
-  
+
   font-size: 1.4rem;
   color: #fff;
 
@@ -139,8 +139,7 @@
   filter: brightness(1.2);
 }
 
-
-main{
+main {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -230,74 +229,105 @@ main{
   align-items: center;
   justify-content: center;
   padding: 0 12px;
-  margin: 0 0 2.4rem 0;
+  margin: 4.4rem 0;
 }
 
 .about img {
   width: auto;
-  height: calc(100vh - 18.6rem);
+  height: calc(100vh - 48.6rem);
   margin: 0 2.8rem;
 }
 
-.about .contentAbout {
+.contentAbout {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.about .contentAbout h2 {
-  max-width: 500px;
+.contentAbout h2 {
+  max-width: 450px;
   font-weight: 700;
-  font-size: 2.4rem;
-  color: rgba(0, 0, 0, 0.85);
+  font-size: 3rem;
+  color: #566dea;
 }
-.about .contentAbout u {
+
+.contentAbout u {
   margin: 0.4rem 0;
   width: 4.8rem;
   border-bottom: 4px solid #566dea;
 }
 
-.about .contentAbout p {
-  max-width: 500px;
+.contentAbout p {
+  max-width: 450px;
   margin: 1.4rem 0 2.8rem 0;
   color: #6c757d;
-}
-.about .contentAbout button {
-  outline: none;
-  border: none;
-  display: block;
-  text-align: center;
-  background-color: #566dea;
-  color: #fff !important;
-  padding: 1.4rem 0.8rem;
-  text-decoration: none !important;
-  border-radius: 10px;
-  text-decoration: none;
-  box-shadow: 3px 3px 4px #b5b5b5;
-  transition: all 0.3s ease;
-}
-
-.about .contentAbout button:hover {
-  background-color: #263481;
 }
 
 .features {
   width: 100vw;
-  max-width: 980px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0 12px;
-  margin: 2.4rem 0;
+  border-radius: 2.4rem 2.4rem 0 0;
+  background-color: #566dea;
+
+  background-image: url(../../assets/icon_white.png);
+  background-repeat: no-repeat;
+  background-position: 150rem 60rem;
 }
 
-.features h2 {
-  margin-bottom: 2.4rem;
-  font-weight: 700;
-  font-size: 1.8rem;
+.featuresContainer {
+  max-width: 980px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.4rem;
+  padding: 0 12px;
+  margin: 2.4rem 0 0 0;
+}
+
+.featuresContainer h2 {
+  margin-bottom: 1.8rem;
+  font-weight: 600;
+  font-size: 3.8rem;
   text-align: center;
-  color: rgba(0, 0, 0, 0.85);
+  color: #fff;
+}
+
+.featuresButtonContainer {
+  width: 100%;
+  padding: 1.4rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.featuresButton {
+  border: none;
+  background-color: #566dea;
+  border-radius: 10px;
+  padding: 1.4rem 4.8rem;
+
+  text-align: center;
+  color: #fff !important;
+  font-weight: 400;
+  font-size: 1.4rem;
+
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1.4rem;
+
+  transition: 0.3s;
+}
+
+.featuresButton:hover {
+  filter: brightness(0.9);
 }
 
 .cardList {
@@ -310,13 +340,22 @@ main{
 }
 
 .card {
+  width: 100%;
+  height: 100%;
+
   cursor: pointer;
-  padding: 1.4rem;
+  padding: 2.4rem;
+
+  background-color: #fff;
   box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.3);
   border-radius: 0.8rem;
   transition: 0.2s;
-  width: 100%;
-  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 1.4rem;
 }
 
 .card:hover {
@@ -324,41 +363,19 @@ main{
 }
 
 .card h2 {
-  margin: 1.4rem 0;
-  font-weight: 400;
-  font-size: x-large;
+  text-align: left;
+  font-weight: 600;
+  color: #566dea;
+  font-size: large;
 }
 
 .card p {
   margin: 1.4rem 0;
 }
 
-.how {
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0 12px;
-  margin: 2.4rem 0 0 0;
-}
-.how img {
+.featuresContainer img {
   width: 70vw;
   height: auto;
-}
-
-.how h2 {
-  text-align: center;
-  margin-bottom: 2.4rem;
-  font-weight: 700;
-  font-size: 1.8rem;
-  color: rgba(0, 0, 0, 0.85);
-}
-
-.how p {
-  max-width: 800px;
-  text-align: center;
-  margin-bottom: 2.4rem;
 }
 
 .cta2 {
@@ -444,47 +461,46 @@ main{
 }
 
 @media (max-width: 720px) {
-  
-.formGroup{
-  display: flex;
-  flex-direction: column;
-  gap: .8rem;
-  align-items: center;
-  justify-content: center;
-}
-.formGroup label{  
-  color: #566DEA;
-  opacity: 1 !important;
-  font-weight: 600;
-  margin: 0.8rem 0;
-}
-.formGroup input{
-  border: 1px solid #6ca6fd;
-}
+  .formGroup {
+    display: flex;
+    flex-direction: column;
+    gap: 0.8rem;
+    align-items: center;
+    justify-content: center;
+  }
+  .formGroup label {
+    color: #566dea;
+    opacity: 1 !important;
+    font-weight: 600;
+    margin: 0.8rem 0;
+  }
+  .formGroup input {
+    border: 1px solid #6ca6fd;
+  }
 
-.formGroup button {
-  outline: none;
-  border: none;
-  display: block;
-  text-align: center;
-  background-color: #566dea;
-  color: #fff !important;
-  padding: 1.4rem 0.8rem;
-  text-decoration: none !important;
-  border-radius: 10px;
-  text-decoration: none;
-  box-shadow: 3px 3px 4px #b5b5b5;
-  transition: all 0.3s ease;
-}
+  .formGroup button {
+    outline: none;
+    border: none;
+    display: block;
+    text-align: center;
+    background-color: #566dea;
+    color: #fff !important;
+    padding: 1.4rem 0.8rem;
+    text-decoration: none !important;
+    border-radius: 10px;
+    text-decoration: none;
+    box-shadow: 3px 3px 4px #b5b5b5;
+    transition: all 0.3s ease;
+  }
 
-.formGroup button:hover {
-  background-color: #263481;
-}
+  .formGroup button:hover {
+    background-color: #263481;
+  }
 
   .cta {
     width: 100vw;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 0 12px;
@@ -521,9 +537,24 @@ main{
   }
 
   .about img {
-    width: auto;
-    height: 50vh;
+    width: 80vw;
+    height: auto;
     margin: 0 2.8rem;
+  }
+
+  .featuresContainer h2 {
+    margin-bottom: 1.8rem;
+    font-weight: 600;
+    font-size: 1.8rem;
+    text-align: center;
+    color: #fff;
+  }
+
+  .card h2 {
+    text-align: left;
+    font-weight: 600;
+    color: #566dea;
+    font-size: large;
   }
 
   .cardList {
@@ -536,7 +567,7 @@ main{
     gap: 2.4rem;
   }
 
-  .how img {
+  .featuresContainer img {
     width: 100vw;
     height: auto;
   }
