--- a/web/src/styles/pages/tutor/PetProfile.module.css
+++ b/web/src/styles/pages/tutor/PetProfile.module.css
@@ -6,29 +6,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 2.4rem;
     background-color: #f3f5ff;
-    overflow: auto;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
-    background-size: auto 45rem;
   }
 
   .content {
     max-width: 90rem;
+    width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
-    gap: 2.4rem;
-    justify-content: center;
-    margin-top: 1.4rem;
+    gap: 1.4rem;
+    align-items: center;
   }
 
   .header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 2.4rem;
   }
 
   .petInfo {
@@ -105,27 +103,27 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4rem 4.4rem;
     background-color: #f3f5ff;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
-    background-position: -25rem 40rem;
+    background-position: -25rem 80rem;
   }
 
   .content {
     max-width: 70rem;
+    width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     gap: 1.4rem;
-    justify-content: center;
-    margin: 2.4rem 0;
+    align-items: center;
   }
 
   .header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 2.4rem;
   }
 
   .petInfo {
@@ -202,27 +200,29 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:  0.8rem 1.4rem;
     background-color: #f3f5ff;
+    overflow: auto;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
-    background-position: -45rem 40rem;
+    background-position: -25rem 80rem;
+    background-size: auto 45rem;
   }
 
   .content {
-    max-width: 90rem;
+    max-width: 32rem;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 0.8rem;
+    gap: 0.4rem;
     justify-content: center;
-    margin: 2.4rem 0;
   }
 
   .header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    margin-bottom: 2.4rem;
   }
 
   .petInfo {
