--- a/web/src/styles/pages/tutor/PetVaccineHistory.module.css
+++ b/web/src/styles/pages/tutor/PetVaccineHistory.module.css
@@ -10,13 +10,15 @@
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
-    overflow: auto;
   }
 
   .content {
     max-width: 90rem;
+    width: 100%;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    gap: 1.4rem;
     align-items: center;
   }
 
@@ -141,7 +143,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4rem 4.4rem;
+    padding: 2rem 2.4rem;
     background-color: #f3f5ff;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
@@ -150,8 +152,10 @@
   }
 
   .content {
-    max-width: 70rem;
+    max-width: 90rem;
+    width: 100%;
     display: flex;
+    gap: 1.4rem;
     flex-direction: column;
     align-items: center;
   }
@@ -279,7 +283,6 @@
     align-items: center;
     padding: 2rem 2.4rem;
     background-color: #f3f5ff;
-    overflow: auto;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
@@ -288,8 +291,8 @@
   }
 
   .content {
-    max-width: 30rem;
-    display: flex;
+    max-width: 90rem;
+    width: 100%;
     flex-direction: column;
     align-items: center;
   }
@@ -350,12 +353,12 @@
   }
 
   .content {
-    padding: 2.4rem 0;
-    max-width: 32rem;
+    max-width: 90vw;
+    width: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 2.4rem;
+    gap: 1.4rem;
     justify-content: center;
   }
 
