--- a/web/src/styles/pages/tutor/TutorLocalizaPet.module.css
+++ b/web/src/styles/pages/tutor/TutorLocalizaPet.module.css
@@ -6,13 +6,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2rem 2.4rem;
     background-color: #f3f5ff;
-    overflow: auto;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
     background-position: -25rem 40rem;
-    background-size: auto 45rem;
   }
 
   .content {
@@ -21,7 +18,7 @@
     overflow: auto;
 
     width: 100%;
-    height: 70vh;
+    height: 80vh;
 
     display: flex;
     flex-direction: row;
@@ -30,7 +27,7 @@
     justify-content: center;
     align-items: center;
 
-    margin-top: 1.4rem;
+    margin: 1.4rem;
 
     padding: 0.8rem;
     border-radius: 0.8rem;
@@ -78,11 +75,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 4rem 4.4rem;
     background-color: #f3f5ff;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
-    background-position: -25rem 40rem;
+    background-position: -25rem 80rem;
   }
 
   .content {
@@ -91,7 +87,7 @@
     overflow: auto;
 
     width: 100%;
-    height: 70vh;
+    height: 80vh;
 
     display: flex;
     flex-direction: row;
@@ -162,11 +158,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding:  0.8rem 1.4rem;
     background-color: #f3f5ff;
+    overflow: auto;
     background-image: url(../../../assets/background-brand.png);
     background-repeat: no-repeat;
-    background-position: -45rem 40rem;
+    background-position: -25rem 80rem;
+    background-size: auto 45rem;
   }
 
   .content {
@@ -175,7 +172,7 @@
     overflow: auto;
 
     width: 100%;
-    height: 70vh;
+    height: 80vh;
 
     display: flex;
     flex-direction: row;
