--- a/web/src/styles/components/InputUpload.module.css
+++ b/web/src/styles/components/InputUpload.module.css
@@ -1,64 +1,66 @@
 /* PC */
 @media (min-width: 720px) {
-  .overlay{
+  .overlay {
     width: 100vw;
     height: 100vh;
-  
+
     background-color: #000000c1;
-  
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  
+
     position: absolute;
     z-index: 200;
     border: none;
   }
-  
-  .overlayImageContainer{
+
+  .overlayImageContainer {
     width: auto;
     height: 80vh;
     margin: 1.4rem;
   }
-  
-  .imageData{
+
+  .imageData {
     width: 100%;
     text-align: center;
-    color: #FFF;
+    color: #fff;
   }
-  
+
   .container {
-    position: relative;
+    background-color: #fff;
+    border-radius: 0.8rem;
+    padding: 0.8rem 1.6rem;
     width: 100%;
   }
-  
+
   .content {
     width: 100%;
   }
-  
+
   .inputContainer {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
+
   .inputContainer label {
     color: #566dea;
     font-weight: 600;
     font-size: larger;
   }
-  
+
   .inputContainer input {
     position: absolute;
     width: 1px;
     height: 1px;
-  
+
     visibility: hidden;
     opacity: 0;
   }
-  
+
   .inputContainer button {
     padding: 0.8rem;
     display: flex;
@@ -70,16 +72,16 @@
     transition: 0.3s;
     cursor: pointer;
   }
-  
+
   .inputContainer button:hover {
     background-color: #ddd;
   }
-  
+
   .inputContainer button svg {
     color: #566dea;
     fill: #566dea;
   }
-  
+
   .imageList {
     width: 100%;
     display: flex;
@@ -90,26 +92,26 @@
     padding: 0 0 0.8rem 0;
     padding: 0.8rem 0 0 0;
   }
-  
+
   .imageContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  
+
     width: 12rem;
     padding: 0.8rem;
-  
+
     background-color: #ddd;
     border-radius: 0.8rem;
     border: none;
   }
-  
-  .imageContainer p{
+
+  .imageContainer p {
     font-size: small;
     text-align: center;
   }
-  
+
   .imageContent {
     width: 10rem;
     height: 10rem;
@@ -120,77 +122,77 @@
     border-radius: 0.4rem;
     overflow: hidden;
   }
-  
-  .imageContent img{
+
+  .imageContent img {
     width: 100%;
     height: auto;
     object-fit: cover;
-    background-color: #FFF;
+    background-color: #fff;
   }
 }
 /* Tablet */
 @media (min-width: 320px) and (max-width: 720px) {
-  .overlay{
+  .overlay {
     width: 100vw;
     height: 100vh;
-  
+
     background-color: #000000c1;
-  
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  
+
     position: absolute;
     z-index: 200;
     border: none;
 
     overflow: auto;
   }
-  
-  .overlayImageContainer{
+
+  .overlayImageContainer {
     width: 100%;
     height: auto;
     margin: 1.4rem;
   }
-  
-  .imageData{
+
+  .imageData {
     width: 100%;
     text-align: center;
-    color: #FFF;
+    color: #fff;
   }
-  
+
   .container {
     position: relative;
     width: 100%;
   }
-  
+
   .content {
     width: 100%;
   }
-  
+
   .inputContainer {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
+
   .inputContainer label {
     color: #566dea;
     font-weight: 600;
     font-size: larger;
   }
-  
+
   .inputContainer input {
     position: absolute;
     width: 1px;
     height: 1px;
-  
+
     visibility: hidden;
     opacity: 0;
   }
-  
+
   .inputContainer button {
     padding: 0.8rem;
     display: flex;
@@ -202,16 +204,16 @@
     transition: 0.3s;
     cursor: pointer;
   }
-  
+
   .inputContainer button:hover {
     background-color: #ddd;
   }
-  
+
   .inputContainer button svg {
     color: #566dea;
     fill: #566dea;
   }
-  
+
   .imageList {
     width: 100%;
     display: flex;
@@ -222,26 +224,26 @@
     padding: 0 0 0.8rem 0;
     padding: 0.8rem 0 0 0;
   }
-  
+
   .imageContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  
+
     width: 12rem;
     padding: 0.8rem;
-  
+
     background-color: #ddd;
     border-radius: 0.8rem;
     border: none;
   }
-  
-  .imageContainer p{
+
+  .imageContainer p {
     font-size: small;
     text-align: center;
   }
-  
+
   .imageContent {
     width: 10rem;
     height: 10rem;
@@ -252,77 +254,77 @@
     border-radius: 0.4rem;
     overflow: hidden;
   }
-  
-  .imageContent img{
+
+  .imageContent img {
     width: 100%;
     height: auto;
     object-fit: cover;
-    background-color: #FFF;
+    background-color: #fff;
   }
 }
 /* Celular */
 @media (max-width: 320px) {
-  .overlay{
+  .overlay {
     width: 100vw;
     height: 100vh;
-  
+
     background-color: #000000c1;
-  
+
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  
+
     position: absolute;
     z-index: 200;
     border: none;
 
     overflow: auto;
   }
-  
-  .overlayImageContainer{
+
+  .overlayImageContainer {
     width: 100%;
     height: auto;
     margin: 1.4rem;
   }
-  
-  .imageData{
+
+  .imageData {
     width: 100%;
     text-align: center;
-    color: #FFF;
+    color: #fff;
   }
-  
+
   .container {
     position: relative;
     width: 100%;
   }
-  
+
   .content {
     width: 100%;
   }
-  
+
   .inputContainer {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
   }
-  
+
   .inputContainer label {
     color: #566dea;
     font-weight: 600;
     font-size: larger;
   }
-  
+
   .inputContainer input {
     position: absolute;
     width: 1px;
     height: 1px;
-  
+
     visibility: hidden;
     opacity: 0;
   }
-  
+
   .inputContainer button {
     padding: 0.8rem;
     display: flex;
@@ -334,16 +336,16 @@
     transition: 0.3s;
     cursor: pointer;
   }
-  
+
   .inputContainer button:hover {
     background-color: #ddd;
   }
-  
+
   .inputContainer button svg {
     color: #566dea;
     fill: #566dea;
   }
-  
+
   .imageList {
     width: 100%;
     display: flex;
@@ -354,26 +356,26 @@
     padding: 0 0 0.8rem 0;
     padding: 0.8rem 0 0 0;
   }
-  
+
   .imageContainer {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-  
+
     width: 12rem;
     padding: 0.8rem;
-  
+
     background-color: #ddd;
     border-radius: 0.8rem;
     border: none;
   }
-  
-  .imageContainer p{
+
+  .imageContainer p {
     font-size: small;
     text-align: center;
   }
-  
+
   .imageContent {
     width: 10rem;
     height: 10rem;
@@ -384,11 +386,11 @@
     border-radius: 0.4rem;
     overflow: hidden;
   }
-  
-  .imageContent img{
+
+  .imageContent img {
     width: 100%;
     height: auto;
     object-fit: cover;
-    background-color: #FFF;
+    background-color: #fff;
   }
 }
